@@ -112,8 +112,9 @@ def suite():
         'test_dbobj',
         'test_dbshelve',
         'test_dbtables',
-        'test_distributed_transactions',
         'test_early_close',
+        'test_distributed_transactions',
+        'test_replication',
         'test_get_none',
         'test_join',
         'test_lock',
